// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchResults /> on mobile,  render with results matches snapshot for post query with filter on 1`] = `
<Fragment>
  <WithAnalyticsEvents(WrappedComponent)
    isCollapsed={true}
    isLoading={false}
    items={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-confluence",
              "containerId": "UNAVAILABLE",
              "containerName": "Muller and Sons",
              "contentType": "confluence-page",
              "friendlyLastModified": "about 7 hours ago",
              "href": "http://baseUrl/spaces/18b58081-6d12-4e0b-b339-8f2d7faa9aa5",
              "iconClass": "aui-iconfont-page-default",
              "isRecentResult": false,
              "lastModified": "2019-07-08T02:54:38.822Z",
              "name": "modi rerum cupiditate rerum non",
              "resultId": "18b58081-6d12-4e0b-b339-8f2d7faa9aa5",
              "resultType": "confluence-object-result",
              "spaceId": "b54f4888-45ab-4761-8b95-891f984ce2c0",
            },
          ],
          "timings": 0,
          "totalSize": 99,
        },
      }
    }
    people={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-person",
              "avatarUrl": "http://lorempixel.com/640/480/people",
              "contentType": "person",
              "href": "/people/cff13b27-d1f2-4577-85cf-76fdd156f9fb",
              "mentionName": "nickname-4v3u3",
              "name": "Santina Feeney",
              "presenceMessage": "",
              "resultId": "people-cff13b27-d1f2-4577-85cf-76fdd156f9fb",
              "resultType": "person-result",
              "userId": "cff13b27-d1f2-4577-85cf-76fdd156f9fb",
            },
          ],
          "timings": 0,
        },
      }
    }
    query="query"
    screenType="postQuerySearchResults"
    spaces={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-confluence",
              "avatarUrl": "http://lorempixel.com/640/480/cats",
              "contentType": "confluence-space",
              "href": "http://baseUrl/spaces/PRODUCT",
              "id": "155c133c-18ba-4bf7-9556-ce172460805c",
              "key": "PRODUCT",
              "name": "Kuhn - Feest",
              "resultId": "space-PRODUCT",
              "resultType": "generic-container-result",
            },
          ],
          "timings": 0,
        },
      }
    }
  />
</Fragment>
`;

exports[`<SearchResults /> on mobile,  render with results matches snapshot for pre query with filter on 1`] = `
<WithAnalyticsEvents(WrappedComponent)
  isCollapsed={false}
  isLoading={false}
  items={
    Object {
      "isLoading": false,
      "results": Object {
        "items": Array [
          Object {
            "analyticsType": "result-confluence",
            "containerId": "UNAVAILABLE",
            "containerName": "Blanda - Dickinson",
            "contentType": "confluence-attachment",
            "friendlyLastModified": "Dec 23, 2018",
            "href": "http://baseUrl/spaces/c86fb60d-c7d1-4c2c-9cbc-8c96387134f8",
            "iconClass": "icon-file-multimedia",
            "isRecentResult": false,
            "lastModified": "2019-07-08T02:54:38.822Z",
            "name": "labore.wma",
            "resultId": "c86fb60d-c7d1-4c2c-9cbc-8c96387134f8",
            "resultType": "confluence-object-result",
            "spaceId": "b535aacc-578b-4fe3-9665-9bca9a8c2762",
          },
        ],
        "timings": 0,
        "totalSize": 99,
      },
    }
  }
  people={
    Object {
      "isLoading": false,
      "results": Object {
        "items": Array [
          Object {
            "analyticsType": "result-person",
            "avatarUrl": "http://lorempixel.com/640/480/people",
            "contentType": "person",
            "href": "/people/ae53c8fe-7db1-43ce-ae85-00b4880acd56",
            "mentionName": "nickname-0py2i",
            "name": "Vada Lueilwitz IV",
            "presenceMessage": "",
            "resultId": "people-ae53c8fe-7db1-43ce-ae85-00b4880acd56",
            "resultType": "person-result",
            "userId": "ae53c8fe-7db1-43ce-ae85-00b4880acd56",
          },
        ],
        "timings": 0,
      },
    }
  }
  spaces={
    Object {
      "isLoading": false,
      "results": Object {
        "items": Array [
          Object {
            "analyticsType": "result-confluence",
            "avatarUrl": "http://lorempixel.com/640/480/cats",
            "contentType": "confluence-space",
            "href": "http://baseUrl/spaces/BORDERS",
            "id": "385c16b5-f5a1-4528-ae79-0ec9ded29035",
            "key": "BORDERS",
            "name": "Anderson, Parker and Kilback",
            "resultId": "space-BORDERS",
            "resultType": "generic-container-result",
          },
        ],
        "timings": 0,
      },
    }
  }
/>
`;

exports[`<SearchResults /> render with intermediate results matches snapshot for post query loading 1`] = `
<Fragment>
  <WithAnalyticsEvents(WrappedComponent)
    isCollapsed={false}
    isLoading={true}
    items={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-confluence",
              "containerId": "UNAVAILABLE",
              "containerName": "Olson - Lakin",
              "contentType": "confluence-attachment",
              "friendlyLastModified": "Jan 23, 2018",
              "href": "http://baseUrl/spaces/127fd3a9-e071-4af8-b05f-de2b65887762",
              "iconClass": "icon-file-image",
              "isRecentResult": false,
              "lastModified": "2019-10-28T23:35:34.642Z",
              "name": "delectus.jpg",
              "resultId": "127fd3a9-e071-4af8-b05f-de2b65887762",
              "resultType": "confluence-object-result",
              "spaceId": "8bc813cd-632b-4bb8-8725-42bacb7ec3d2",
            },
          ],
          "timings": 0,
          "totalSize": 99,
        },
      }
    }
    people={
      Object {
        "isLoading": true,
        "results": null,
      }
    }
    query="query"
    screenType="cachedResults"
    spaces={
      Object {
        "isLoading": true,
        "results": null,
      }
    }
  />
  <LoadingSpinner />
</Fragment>
`;

exports[`<SearchResults /> render with results matches snapshot for post query 1`] = `
<Fragment>
  <WithAnalyticsEvents(WrappedComponent)
    isCollapsed={false}
    isLoading={false}
    items={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-confluence",
              "containerId": "UNAVAILABLE",
              "containerName": "Lebsack - Hirthe",
              "contentType": "confluence-blogpost",
              "friendlyLastModified": "about 7 hours ago",
              "href": "http://baseUrl/spaces/cf94aabc-36e8-4a29-a807-7faa28c92792",
              "iconClass": "aui-iconfont-page-default",
              "isRecentResult": false,
              "lastModified": "2019-07-08T02:54:38.822Z",
              "name": "occaecati et consequatur amet dicta",
              "resultId": "cf94aabc-36e8-4a29-a807-7faa28c92792",
              "resultType": "confluence-object-result",
              "spaceId": "06ee101a-d558-40c9-854a-e468f9abf979",
            },
          ],
          "timings": 0,
          "totalSize": 99,
        },
      }
    }
    people={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-person",
              "avatarUrl": "http://lorempixel.com/640/480/people",
              "contentType": "person",
              "href": "/people/cbe55157-437c-4e20-8569-106485b4a3df",
              "mentionName": "nickname-ri83n",
              "name": "Madyson Lubowitz",
              "presenceMessage": "",
              "resultId": "people-cbe55157-437c-4e20-8569-106485b4a3df",
              "resultType": "person-result",
              "userId": "cbe55157-437c-4e20-8569-106485b4a3df",
            },
          ],
          "timings": 0,
        },
      }
    }
    query="query"
    screenType="postQuerySearchResults"
    spaces={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-confluence",
              "avatarUrl": "http://lorempixel.com/640/480/cats",
              "contentType": "confluence-space",
              "href": "http://baseUrl/spaces/REDEFINE",
              "id": "71629322-521e-4b19-89de-4c75c82ec38a",
              "key": "REDEFINE",
              "name": "Spinka and Sons",
              "resultId": "space-REDEFINE",
              "resultType": "generic-container-result",
            },
          ],
          "timings": 0,
        },
      }
    }
  />
</Fragment>
`;

exports[`<SearchResults /> render with results matches snapshot for post query with filter on 1`] = `
<Fragment>
  <WithAnalyticsEvents(WrappedComponent)
    isCollapsed={true}
    isLoading={false}
    items={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-confluence",
              "containerId": "UNAVAILABLE",
              "containerName": "Konopelski LLC",
              "contentType": "confluence-page",
              "friendlyLastModified": "Jan 23, 2018",
              "href": "http://baseUrl/spaces/1132af03-2630-4d26-858a-8ec56811db6a",
              "iconClass": "aui-iconfont-page-default",
              "isRecentResult": false,
              "lastModified": "2019-10-28T23:35:34.642Z",
              "name": "sapiente consequatur esse unde ea",
              "resultId": "1132af03-2630-4d26-858a-8ec56811db6a",
              "resultType": "confluence-object-result",
              "spaceId": "b61de77e-6195-47ae-92e6-7e19477f3c1b",
            },
          ],
          "timings": 0,
          "totalSize": 99,
        },
      }
    }
    people={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-person",
              "avatarUrl": "http://lorempixel.com/640/480/people",
              "contentType": "person",
              "href": "/people/5aff4d5d-be06-42ec-b67c-0922d664e88b",
              "mentionName": "nickname-1iepp",
              "name": "Ada DuBuque",
              "presenceMessage": "",
              "resultId": "people-5aff4d5d-be06-42ec-b67c-0922d664e88b",
              "resultType": "person-result",
              "userId": "5aff4d5d-be06-42ec-b67c-0922d664e88b",
            },
          ],
          "timings": 0,
        },
      }
    }
    query="query"
    screenType="postQuerySearchResults"
    spaces={
      Object {
        "isLoading": false,
        "results": Object {
          "items": Array [
            Object {
              "analyticsType": "result-confluence",
              "avatarUrl": "http://lorempixel.com/640/480/cats",
              "contentType": "confluence-space",
              "href": "http://baseUrl/spaces/PROGRESSIVE",
              "id": "1d0cbb4e-0c1e-4361-bb36-71511036ae53",
              "key": "PROGRESSIVE",
              "name": "Hyatt - Gorczany",
              "resultId": "space-PROGRESSIVE",
              "resultType": "generic-container-result",
            },
          ],
          "timings": 0,
        },
      }
    }
  />
</Fragment>
`;

exports[`<SearchResults /> render with results matches snapshot for pre query 1`] = `
<WithAnalyticsEvents(WrappedComponent)
  isCollapsed={false}
  isLoading={false}
  items={
    Object {
      "isLoading": false,
      "results": Object {
        "items": Array [
          Object {
            "analyticsType": "result-confluence",
            "containerId": "UNAVAILABLE",
            "containerName": "Hilpert Group",
            "contentType": "confluence-page",
            "friendlyLastModified": "about 7 hours ago",
            "href": "http://baseUrl/spaces/a430a73d-9e9b-4cce-86a5-1618965ffea6",
            "iconClass": "aui-iconfont-page-default",
            "isRecentResult": false,
            "lastModified": "2019-07-08T02:54:38.822Z",
            "name": "soluta non omnis vel ut",
            "resultId": "a430a73d-9e9b-4cce-86a5-1618965ffea6",
            "resultType": "confluence-object-result",
            "spaceId": "23683393-e090-4492-bd03-e808d9d81098",
          },
        ],
        "timings": 0,
        "totalSize": 99,
      },
    }
  }
  people={
    Object {
      "isLoading": false,
      "results": Object {
        "items": Array [
          Object {
            "analyticsType": "result-person",
            "avatarUrl": "http://lorempixel.com/640/480/people",
            "contentType": "person",
            "href": "/people/40f67ee1-7558-4f56-b601-16bcd266da80",
            "mentionName": "nickname-cnq03",
            "name": "Miss Agnes Harvey",
            "presenceMessage": "",
            "resultId": "people-40f67ee1-7558-4f56-b601-16bcd266da80",
            "resultType": "person-result",
            "userId": "40f67ee1-7558-4f56-b601-16bcd266da80",
          },
        ],
        "timings": 0,
      },
    }
  }
  spaces={
    Object {
      "isLoading": false,
      "results": Object {
        "items": Array [
          Object {
            "analyticsType": "result-confluence",
            "avatarUrl": "http://lorempixel.com/640/480/cats",
            "contentType": "confluence-space",
            "href": "http://baseUrl/spaces/PROGRAMMING",
            "id": "ec8184c9-4bf7-48c1-b98f-8e79c41fa450",
            "key": "PROGRAMMING",
            "name": "Padberg - Kirlin",
            "resultId": "space-PROGRAMMING",
            "resultType": "generic-container-result",
          },
        ],
        "timings": 0,
      },
    }
  }
/>
`;

exports[`<SearchResults /> render with results matches snapshot for pre query loading 1`] = `<LoadingSpinner />`;

exports[`<SearchResults /> render with results matches snapshot for pre query with filter on 1`] = `
<WithAnalyticsEvents(WrappedComponent)
  isCollapsed={false}
  isLoading={false}
  items={
    Object {
      "isLoading": false,
      "results": Object {
        "items": Array [
          Object {
            "analyticsType": "result-confluence",
            "containerId": "UNAVAILABLE",
            "containerName": "Russel, Grady and Baumbach",
            "contentType": "confluence-attachment",
            "friendlyLastModified": "Dec 23, 2018",
            "href": "http://baseUrl/spaces/f4042cad-cad4-4806-a18d-01ced82d4e59",
            "iconClass": "dummy-unmatched-icon-class",
            "isRecentResult": false,
            "lastModified": "2019-07-08T02:54:38.822Z",
            "name": "eos.test",
            "resultId": "f4042cad-cad4-4806-a18d-01ced82d4e59",
            "resultType": "confluence-object-result",
            "spaceId": "4f733a07-2edb-4737-8bb8-c879cb27b158",
          },
        ],
        "timings": 0,
        "totalSize": 99,
      },
    }
  }
  people={
    Object {
      "isLoading": false,
      "results": Object {
        "items": Array [
          Object {
            "analyticsType": "result-person",
            "avatarUrl": "http://lorempixel.com/640/480/people",
            "contentType": "person",
            "href": "/people/ea1039c0-1e13-457d-81ca-fa1cf4cc8df5",
            "mentionName": "nickname-nehql",
            "name": "Mya Rau",
            "presenceMessage": "",
            "resultId": "people-ea1039c0-1e13-457d-81ca-fa1cf4cc8df5",
            "resultType": "person-result",
            "userId": "ea1039c0-1e13-457d-81ca-fa1cf4cc8df5",
          },
        ],
        "timings": 0,
      },
    }
  }
  spaces={
    Object {
      "isLoading": false,
      "results": Object {
        "items": Array [
          Object {
            "analyticsType": "result-confluence",
            "avatarUrl": "http://lorempixel.com/640/480/cats",
            "contentType": "confluence-space",
            "href": "http://baseUrl/spaces/VIRGIN ISLANDS, U.S.",
            "id": "4a56bc68-196e-48d1-bd38-d97d60ec9cfc",
            "key": "VIRGIN ISLANDS, U.S.",
            "name": "Buckridge - Jacobi",
            "resultId": "space-VIRGIN ISLANDS, U.S.",
            "resultType": "generic-container-result",
          },
        ],
        "timings": 0,
      },
    }
  }
/>
`;

exports[`<SearchResults /> with no results render and matches snapshot for post query loading 1`] = `
<Fragment>
  <LoadingSpinner />
</Fragment>
`;
